[package]
description = "a little program that outputs the time and date for my starship prompt"
license = "MIT"
name = "prop-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.4"
